Fix dark mode in canvas

--- a/community-website/styles/Home.module.css
+++ b/community-website/styles/Home.module.css
@@ -134,6 +134,8 @@
   top: 0;
   left: 0;
   z-index: -1;
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 600px) {
